# Diagenetic_model_LHeureux_2018

./: .editorconfig  .gitignore  CITATION.cff  Makefile  README.md  entangled.dhall  plot_fortran_outputs.R  pyproject.toml
data/: input.cfg  output.h5
docs/: index.html  python-interface.html
lit/: index.md  python-interface.md
marlpde/: __init__.py  __main__.py  marlpde.py  scan.py
notebooks/: runs.ipynb
src/: cfgio_mod.f90  decomposed.f  lheureux.f  lheureux.f90  patched.f90  patched.f90.old
