[tool.poetry]
name = "marlpde"
version = "0.1.0"
description = "Wrapper around Fortran code for solving model for marl limestone"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
